--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+    <title>space_muse_</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
